# mantleproof

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  dd.md  docker-compose.yml  mantleproof_brand_kit.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refine.md  tsconfig.base.json
cli/: README.md  (+2 more)
engine/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
engine/mantleproof/: __init__.py  main.py  pipeline.py  settings.py  tier1.py
engine/migrations/: env.py
engine/scripts/: backfill_x402_receipt.py  give_feedback_demo.py  measure_metrics.py  resolve_dispute_mainnet.py  run_pipeline_mantle.py  run_pipeline_sepolia.py  smoke_get_audit_mainnet.py  validate_tier1.py  validate_tier2.py  verify_demo1_receipt.py  verify_demo2_receipt.py  verify_demo3_receipt.py  verify_dispute_receipt.py  verify_reputation_receipt.py
engine/tests/: conftest.py  test_bytecode.py  test_config_tokens.py  test_dex_check.py  test_dispute_events.py  test_dispute_fetch.py  test_dispute_reaudit.py  test_dispute_resolver.py  test_hallucination_guard.py  test_ipfs_fetch.py  test_llm.py  test_meth_check.py  test_pipeline.py  test_pipeline_stake_value.py  test_prompt_with_counterclaim.py  test_registry_reader.py  test_replay_check.py  test_reputation_feedback.py  test_routes_audit.py  test_routes_health.py  test_routes_triage.py  test_routes_x402.py  test_source_resolver.py  test_staking_reader.py  test_tier1.py  test_tier1_precision.py  test_tier2_prompt.py  test_triage_cache_warmer.py  test_triage_deploy_feed.py  (+6 more)
(+229 files in other folders)
