[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mantleproof-engine"
version = "0.0.0"
description = "MantleProof off-chain audit engine"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "web3>=7.4",
  "eth-account>=0.13",
  "httpx>=0.27",
  "pyevmasm>=0.2.3",
  "google-genai>=0.3",      # Gemini — DEFAULT provider
  "anthropic>=0.39",        # key-gated adapter
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "black>=24.10",
  "mypy>=1.13",
]
# CDP x402 facilitator (Base mainnet). Optional: only needed when
# x402_facilitator=cdp. CI / default x402org mode does not import it.
cdp = [
  "cdp-sdk>=1.40",
]

[tool.setuptools.packages.find]
include = ["mantleproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
